# ble-led-badge

./: .gitignore  README.md  badge-osc-server.spec  pyproject.toml  test_text_send.py
.github/workflows/: build-arm64.yml
badge_controller/: __init__.py  badge.py  cli.py  commands.py  encryption.py  protocol.py  text_renderer.py
docs/: character-encoding.md
examples/: test_image_upload.py  test_text_send.py
experiments/: analyze_bitmap.py  decrypt_ae02.py  decrypt_image_data.py  experiment_ae01_wang.py  experiment_ascii.py  experiment_bitmap.py  experiment_dats.py  experiment_dats_limit.py  experiment_dats_params.py  experiment_dats_zeros.py  experiment_decrypt_and_play.py  experiment_direct_image.py  experiment_packet_format.py  experiment_wang.py  experiment_wang_encrypted.py  experiment_wang_via_dats.py  parse_badge_trace.py  parse_pklg.py
font-editor/: badge-image.json  font.json  index.html  similey.json
initial_analysis/: Analysis.md  analyze_alphabet_trace.py  badge-1.py  ble_scan.py  character_mapper.py  decrypt_traces.py  experiment.py  list_characteristics.py  parse_btsnoop.py  test_gfx_fonts.py
osc_server/: README.md  __init__.py  server.py
